# steam-ad-gen-poc

./: .flake8  .gitignore  alembic.ini  main.py  pyproject.toml  pyproject.toml.bak  readme.md  sample_config.json
alembic/: env.py
alembic/versions/: 19a1efb62786_initial_migration.py  357551d7bfaf_initial_migration.py  61bbaf715bc6_initial_migration.py  9494082b0213_initial_migration.py
src/: container.py  database_manager.py  dto_handler.py  http_client.py  migration.py  scraper.py
src/dto/steam_data/: game.py  user.py  user_game_stat.py
src/dto/steam_persistance/: upsert_response.py
src/dto/steam_persistance/game/: upsert_game.py
src/dto/steam_persistance/review/: upsert_query_summary.py  upsert_review.py
src/dto/steam_persistance/user/: upsert_user.py  upsert_user_game_stat.py
src/dto/steam_reviews/: __init__.py  author.py  response.py  review.py
src/dto/steam_reviews_response/: __init__.py  author.py  query_summary.py  review.py
src/models/: __init__.py  base_model.py  game_model.py  review_model.py  review_query_response_model.py  review_query_summary_model.py  user_game_stat.py  user_model.py
tests/: dto_handler_test.py  scraper_test.py
