[project]
name = "steam-ad-gen-poc"
version = "0.1.0"
description = "Steam 리뷰 기반 GenAI 광고문구 생성 PoC"
authors = [
    {name = "m4r()",email = "50446006+chauneng@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-mock = "^3.14.1"

