[project]
name = "steam-ad-gen-poc"
version = "0.1.0"
description = "Steam 리뷰 기반 GenAI 광고문구 생성 PoC"
authors = [
    {name = "m4r()",email = "50446006+chauneng@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx (>=0.28.1,<0.29.0)",
    "pydantic (>=2.11.7,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.isort]
# Use the Black-compatible profile so imports format nicely alongside Black
profile = "black"
# Match Black’s line length
line_length = 88
# Ensure trailing commas for multi-line imports
include_trailing_comma = true
# Combine “from x import a, b” where possible
combine_as_imports = true
# Force imports to wrap in grid style once they exceed the line length
multi_line_output = 3
# Skip sorting __init__.py if you prefer
skip = ["__init__.py"]
# You can also group your own first-party packages, e.g.:
# known_first_party = ["my_package"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-mock = "^3.14.1"
flake8 = "^7.2.0"
pylint = "^3.3.7"
black = "^25.1.0"
isort = "^6.0.1"
mypy = "^1.16.1"
hypothesis = "^6.135.14"

